Fixes for homepage styling

--- a/src/client/scss/sections/about.scss
+++ b/src/client/scss/sections/about.scss
@@ -1,11 +1,11 @@
 .header {
-  &.page3 {
+  &.about {
     min-height: 180px;
     background: #16272f;
   }
 }
 .body {
-  &.page3 {
+  &.about {
     background: #1b2c35;
   }
 }
