--- a/src/client/scss/sections/footer.scss
+++ b/src/client/scss/sections/footer.scss
@@ -2,15 +2,17 @@
   width: 100%;
   height: 252px;
   background: #1b2c35;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   .container.wrap {
+    padding-top: 10px;
     max-width: 770px;
+    width: 100%;
   }
   ul {
-    width: 100%;
-    margin-top: 60px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     li {
@@ -40,13 +42,7 @@
     }
   }
 }
-.coopyright {
-  position: absolute;
-  bottom: 30px;
-  left: 50%;
-  margin-left: -50%;
-  width: 100%;
-  text-align: center;
+.copyright {
   p {
     font-family: Poppins;
     font-size: 15px;
