--- a/src/client/scss/sections/pools.scss
+++ b/src/client/scss/sections/pools.scss
@@ -65,7 +65,7 @@
   }
 }
 .pools_info {
-  background: #1b2c35;
+  background: $xdsGreyBlue;
   // backdrop-filter: blur(4px);
   border-radius: 10px;
   width: 99%;
