--- a/src/client/scss/sections/apply.scss
+++ b/src/client/scss/sections/apply.scss
@@ -135,7 +135,7 @@
         width: 80%;
         height: 62px;
         padding: 0 20px;
-        background: #1b2c35;
+        background: $xdsGreyBlue;
         border: 1px solid #606061;
         box-sizing: border-box;
         border-radius: 10px;
@@ -151,7 +151,7 @@
         width: 80%;
         height: 154px;
         padding: 0 20px;
-        background: #1b2c35;
+        background: $xdsGreyBlue;
         border: 1px solid #606061;
         box-sizing: border-box;
         border-radius: 10px;
@@ -237,7 +237,7 @@
       width: 100% !important;
       height: 62px;
       padding: 0 20px;
-      background: #1b2c35;
+      background: $xdsGreyBlue;
       border: 1px solid #606061;
       box-sizing: border-box;
       border-radius: 10px;
@@ -255,7 +255,7 @@
     width: 100%;
     height: 62px;
     padding: 0 20px;
-    background: #1b2c35;
+    background: $xdsGreyBlue;
     border: 1px solid #606061;
     box-sizing: border-box;
     border-radius: 10px;
@@ -273,14 +273,14 @@
       right: 20px;
     }
     .list {
-      background: #1b2c35;
+      background: $xdsGreyBlue;
       border: 1px solid #606061;
       width: 100%;
       border-radius: 10px;
       margin-bottom: 20px;
       li {
         
-        background: #1b2c35 !important;
+        background: $xdsGreyBlue !important;
         border-top: 1px solid #606061;
       
         padding: 20px 20px;
