--- a/src/client/scss/sections/footer.scss
+++ b/src/client/scss/sections/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 252px;
-  background: #1b2c35;
+  background: $xdsGreyBlue;
   display: flex;
   flex-direction: column;
   align-items: center;
