--- a/src/client/scss/sections/header.scss
+++ b/src/client/scss/sections/header.scss
@@ -1,19 +1,11 @@
-.header {
-  .container_wrap {
-    margin: inherit;
-    padding: 0px 250px;
-    @media screen and (max-width: 1900px){
-      padding: 0px 160px;
-    }
+.header_all {
+  background: url(../img/headerBg.png) no-repeat;
+  padding: 50px 200px;
+  @media screen and (max-width: 1900px) {
+    padding: 30px 120px;
   }
 }
-.top_bg {
-  width: 100%;
-  min-height: 734px;
-  background: url(../img/headerBg.jpg) no-repeat;
-  background-size: cover;
-}
-.header_top {
+.header_center {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -25,7 +17,6 @@
   }
 }
 .header_links {
-  // max-width: 400px;
   width: 50%;
   display: flex;
   flex-direction: row;
@@ -68,58 +59,5 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.11);
       background: #3ec6c1;
     }
-  }
-}
-.header_title {
-  margin: 0 auto;
-  max-width: 802px;
-  width: 100%;
-  margin-top: 117px;
-  h1 {
-    font-family: Poppins;
-    font-size: 60px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 70px;
-    letter-spacing: -0.04em;
-    text-align: center;
-    color: #ffffff;
-    .highlighted_header_text {
-      color: #3ec6c1;
-    }
-  }
-  p {
-    margin: 0 auto;
-    margin-top: 25px;
-    max-width: 533px;
-    font-family: Poppins;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 25px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #ffffff;
-  }
-}
-.header_btns {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 480px;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 25px;
-  button {
-    width: 227px;
-    height: 68px;
-    color: #ffffff;
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 17px;
-    letter-spacing: -0.02em;
   }
 }
