Make background colors more resilient

--- a/src/client/scss/sections/action_call.scss
+++ b/src/client/scss/sections/action_call.scss
@@ -1,3 +1,7 @@
+.call_to_action_container {
+  background-color: $xdsDarkGreyBlue;
+}
+
 .call_to_action {
   display: flex;
   flex-direction: column;
