--- a/src/client/scss/sections/litepaper.scss
+++ b/src/client/scss/sections/litepaper.scss
@@ -1,13 +1,13 @@
-.about_page {
+.litepaper_page {
   background-color: $xdsGreyBlue;
 }
-.about_title {
+.litepaper_title {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 115px;
 }
-.about_main {
+.litepaper_main {
   width: 75%;
   margin: 0 auto;
 }
