--- a/src/client/scss/variables/global.scss
+++ b/src/client/scss/variables/global.scss
@@ -23,6 +23,7 @@ $screen-lg-max: ($screen-xlg-min - 1); // до 1199
 $white: #fff;
 $black: #000;
 $xdsGreyBlue: #1b2c35;
+$xdsDarkGreyBlue: #16272e;
 
 // position flex
 %flex-col {
