Fixing litepaper header, naming

--- a/src/client/scss/sections/litepaper.scss
+++ b/src/client/scss/sections/litepaper.scss
@@ -8,8 +8,11 @@
   padding-top: 115px;
 }
 .litepaper_main {
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
+}
+.large_title.litepaper {
+  max-width: 968px;
 }
 .page_description {
   padding-top: 50px;
