--- a/src/client/scss/sections/footer.scss
+++ b/src/client/scss/sections/footer.scss
@@ -35,7 +35,7 @@
         text-decoration: none;
         transition: $transition;
         &:hover {
-          color: #3ec6c1;
+          color: $xdsAccent;
           
         }
       }
