--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -14,3 +14,4 @@
 @import "sections/pools.scss";
 @import "sections/litepaper.scss";
 @import "sections/apply.scss";
+@import "sections/detail_card.scss";
