--- a/src/client/scss/sections/action_call.scss
+++ b/src/client/scss/sections/action_call.scss
@@ -26,7 +26,7 @@
     text-align: center;
     color: #ffffff;
     .highlighted_title_text {
-      color: #3ec6c1;
+      color: $xdsAccent;
     }
   }
   p {
