--- a/src/client/scss/sections/header.scss
+++ b/src/client/scss/sections/header.scss
@@ -43,7 +43,7 @@
     color: #000;
     transition: $transition;
     &:hover {
-      background: #3ec6c1;
+      background: $xdsAccent;
     }
   }
   a {
@@ -61,7 +61,7 @@
     border-radius: 100px;
     &:hover {
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.11);
-      background: #3ec6c1;
+      background: $xdsAccent;
     }
   }
 }
