--- a/src/client/scss/variables/global.scss
+++ b/src/client/scss/variables/global.scss
@@ -24,6 +24,10 @@ $white: #fff;
 $black: #000;
 $xdsGreyBlue: #1b2c35;
 $xdsDarkGreyBlue: #16272e;
+$xdsVeryDarkBg: #16272f; 
+$xdsAccent: #3ec6c1;
+$xdsAccentBorder: 2px solid $xdsAccent;
+$xdsBorderRadius: 22px;
 
 // position flex
 %flex-col {
