--- a/src/client/scss/sections/pools.scss
+++ b/src/client/scss/sections/pools.scss
@@ -1,5 +1,5 @@
 .pools {
-  background-color: #1B2C35;
+  background-color: $xdsGreyBlue;
   padding: 70px 180px;
   @media screen and (max-width: 1900px){
     padding: 110px 80px;
