--- a/src/client/scss/sections/detail_card.scss
+++ b/src/client/scss/sections/detail_card.scss
@@ -2,8 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .pool_detail {
-    padding-top: 100px; 
+  .detail_section {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border: $xdsAccentBorder;
+    border-radius: 22px;
+    background-color: $xdsVeryDarkBg;
+    padding: 53px;
     .detail_title {
       font-size: 0.6em;
       font-weight: 300;
@@ -16,14 +24,8 @@
       font-weight: 700;
       font-size: 1.1em;
     }
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    border: $xdsAccentBorder;
-    border-radius: 22px;
-    background-color: $xdsVeryDarkBg;
-    padding: 53px;
+  }
+  .pool_detail {
     .pool_detail_top {
       display: flex;
       justify-content: space-between;
