--- a/src/client/scss/sections/detail_card.scss
+++ b/src/client/scss/sections/detail_card.scss
@@ -3,17 +3,9 @@
   flex-direction: column;
   align-items: center;
   .detail_section {
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    border: $xdsAccentBorder;
-    border-radius: 22px;
-    background-color: $xdsVeryDarkBg;
-    padding: 53px;
+    @extend .info_box;
     .detail_title {
-      font-size: 0.6em;
+      font-size: 0.7em;
       font-weight: 300;
       color: #fffefe;
       margin-bottom: 10px;
@@ -25,6 +17,7 @@
       font-size: 1.1em;
     }
     h4 {
+      font-size: 1.2em;
       color: #fffefe;
       font-weight: 600;
     }
@@ -75,12 +68,12 @@
     .pool_detail_middle {
       display: flex;
       flex-flow: row wrap;
-      width: 800px;
+      width: 100%;
       border-radius: 22px;
       overflow: hidden;
       .pool_detail_info_block {
         padding: 35px;
-        width: 200px;
+        width: 25%;
         background-color: $xdsGreyBlue;
       }
       .light_border_bottom {
@@ -129,6 +122,7 @@
     }
     .investment_detail_middle {
       display: flex;
+      width: 100%;
       border-radius: 22px;
       overflow: hidden;
       .investment_detail_info_block {
@@ -139,8 +133,46 @@
         text-align: center;
         padding: 35px;
         height: 225px;
-        width: 200px;
+        width: 25%;
         background-color: $xdsGreyBlue;
+      }
+    }
+  }
+  .important_links {
+    width: 80%;
+    h4 {
+      align-self: flex-start;
+      padding: 0px 0px 60px 15px;
+    }
+    .important_links_blocks {
+      display: flex;
+      flex-flow: row wrap;
+      .important_link_block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: $xdsGreyBlue;
+        border-radius: 22px;
+        height: 10vw;
+        width: 29%;
+        margin: 2%;
+        overflow: hidden;
+        padding: 10px;
+        a {
+          font-size: 0.8em;
+          color: $xdsAccent;
+          text-decoration: none;
+        }
+      }
+      .connect_links {
+        align-items: flex-start;
+        background: none;
+        .connect_link_images {
+          display: flex;
+          justify-content: space-between;
+          color: white;
+        }
       }
     }
   }
