--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -7,11 +7,14 @@
 @import "extensions/demo";
 
 // Sections - Дублирующиеся раздела сайта
+// these file include classes used for extension -- keep at top
 @import "all.scss";
-@import "sections/action_call.scss";
-@import "sections/header.scss";
-@import "sections/footer.scss";
 @import "sections/pools.scss";
-@import "sections/litepaper.scss";
+
+@import "sections/action_call.scss";
 @import "sections/apply.scss";
 @import "sections/detail_card.scss";
+@import "sections/disclaimer.scss";
+@import "sections/footer.scss";
+@import "sections/header.scss";
+@import "sections/litepaper.scss";
