--- a/src/client/scss/sections/disclaimer.scss
+++ b/src/client/scss/sections/disclaimer.scss
@@ -1,11 +1,20 @@
 // containing div ('info_box') is a flex container
 .disclaimer_title {
-  @extend .pools-title;
+  @extend .pool_block_title;
   align-self: flex-start;
-  margin-bottom: 30px;
+  padding: 0px;
+  h4 {
+    padding-bottom: 30px;
+  }
 }
 
 .disclaimer_descr {
-  @extend .pools-title-descr;
+  font-family: Poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: -0.04em;
+  color: #fffefe;
+  opacity: 0.5;
   line-height: 2.5em;
 }
