Fix pools bottom button margin

--- a/src/client/scss/sections/pools.scss
+++ b/src/client/scss/sections/pools.scss
@@ -1,8 +1,8 @@
 .pools {
   background-color: $xdsGreyBlue;
-  padding-top: 50px;
+  padding: 50px 0px;
   @media screen and (max-width: 1900px){
-    padding-top: 80px;
+    padding: 80px 0px;
   }
   display: flex;
   flex-direction: column;
