--- a/src/client/scss/sections/apply.scss
+++ b/src/client/scss/sections/apply.scss
@@ -17,11 +17,11 @@
     top: 0;
     left: 0;
   }
-  .pools-title {
+  .pools_title {
     margin-top: 65px;
     margin-left: 40px;
   }
-  .pools-title-descr {
+  .pools_title_descr {
     margin: 0;
     margin-top: 15px;
     margin-left: 40px;
@@ -55,12 +55,12 @@
   &:first-child {
     border-top: none;
   }
-  .pools-title-descr {
+  .pools_title_descr {
     margin: 0;
     padding-bottom: 10px;
     font-size: 21px;
   }
-  .pools-title {
+  .pools_title {
     margin: 0;
     font-size: 30px;
   }
@@ -165,7 +165,7 @@
       }
     }
   }
-  .pools-title-descr {
+  .pools_title_descr {
     margin-top: 20px;
   }
 }
@@ -214,7 +214,7 @@
     color: #979797;
   }
 }
-.pools-title_form {
+.pools_title_form {
   margin: 40px 0;
 }
 .form_date {
