Get nice-select and jquery working with react

--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -4,7 +4,7 @@
         "variables/normalize.scss";
 
 // Extensions - Расширения
-@import "extensions/demo";
+@import "extensions/nice-select.scss";
 
 // Sections - Дублирующиеся раздела сайта
 // these file include classes used for extension -- keep at top
